checked on the overflow issue

--- a/FCC-projects/Product-landing-Page/styles.css
+++ b/FCC-projects/Product-landing-Page/styles.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    
 }
 body{
      background-color: rgb(245, 245, 226);
@@ -105,7 +106,7 @@ form{
     border-radius: 5px;
 }
 footer{
-    background-color: rgb(178, 52, 52) ;
+    
     background: linear-gradient(90deg , #660708 20%,  #A4161A 60%, #BA181B 80% ,#E5383B 100%);
     height: 200px;
     width: 100%;
